--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "python_jq"]
 	path = python_jq
 	url = https://gist.github.com/shimajima-eiji/401508ad48e248c6371e30bec1fcadb6
+[submodule "adiary_syntaxhilight"]
+	path = adiary_syntaxhilight
+	url = https://gist.github.com/shimajima-eiji/8d5e3b9df3d90dadfef51f5c09e3857a
