--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "adiary_syntaxhilight"]
 	path = adiary_syntaxhilight
 	url = https://gist.github.com/shimajima-eiji/8d5e3b9df3d90dadfef51f5c09e3857a
+[submodule "mapr_pands"]
+	path = mapr_pands
+	url = https://gist.github.com/shimajima-eiji/115ad9d07b169f68c8464a0525f99d37
