git submodule add -f python_webapi

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "mapr_maintenance"]
 	path = mapr_maintenance
 	url = https://gist.github.com/shimajima-eiji/115ad9d07b169f68c8464a0525f99d37
+[submodule "python_webapi"]
+	path = python_webapi
+	url = https://gist.github.com/shimajima-eiji/ed5b27eeb47181613abbdf04222f567c
