--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "expantion_command"]
 	path = expantion_command
 	url = https://gist.github.com/shimajima-eiji/41e1492848a00d3f095286eecc4bbe85
+[submodule "install_golang"]
+	path = install_golang
+	url = https://gist.github.com/shimajima-eiji/71a414ae1c6848213d171db5a99623ad
